fix: update accommodation controller